# SENA-c_sw

.github/workflows/: ci.yml
ref/: CMakeLists.txt  README.md  build.sh
ref/cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake
ref/src/: CMakeLists.txt  interpolate.f90  pack_unpk.code  setup_pack_unpk.code  sw_core.F90  sw_driver.F90
ref/test/: CMakeLists.txt
ref/test/src/: interpolateTest.f90
ref/test/test_input/: c_sw_12x24.nl  c_sw_24x24.nl  c_sw_48x24.nl  c_sw_48x48.nl
ref/test/test_output/: c_sw_12x24.test  c_sw_24x24.test  c_sw_48x24.test  c_sw_48x48.test
